
[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-0 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:7 - 3:15)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const _any_: any;
   3 | _any_ as string;
     |       ~~~~~~~~~
   4 |         
  Label: Original expression has type `any`. (3:1 - 3:5)
   2 | declare const _any_: any;
   3 | _any_ as string;
     | ^^^^^ Original expression has type `any`.
   4 |         
  Label: Asserted type is `string`. (3:10 - 3:15)
   2 | declare const _any_: any;
   3 | _any_ as string;
     |          ^^^^^^ Asserted type is `string`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-1 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:11 - 3:16)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const _unknown_: unknown;
   3 | _unknown_ as any;
     |           ~~~~~~
   4 |         
  Label: Original expression has type `unknown`. (3:1 - 3:9)
   2 | declare const _unknown_: unknown;
   3 | _unknown_ as any;
     | ^^^^^^^^^ Original expression has type `unknown`.
   4 |         
  Label: Asserted type is `any`. (3:14 - 3:16)
   2 | declare const _unknown_: unknown;
   3 | _unknown_ as any;
     |              ^^^ Asserted type is `any`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-2 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:7 - 3:17)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const _any_: any;
   3 | _any_ as Function;
     |       ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `any`. (3:1 - 3:5)
   2 | declare const _any_: any;
   3 | _any_ as Function;
     | ^^^^^ Original expression has type `any`.
   4 |         
  Label: Asserted type is `Function`. (3:10 - 3:17)
   2 | declare const _any_: any;
   3 | _any_ as Function;
     |          ^^^^^^^^ Asserted type is `Function`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-3 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:7 - 3:14)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const _any_: any;
   3 | _any_ as never;
     |       ~~~~~~~~
   4 |         
  Label: Original expression has type `any`. (3:1 - 3:5)
   2 | declare const _any_: any;
   3 | _any_ as never;
     | ^^^^^ Original expression has type `any`.
   4 |         
  Label: Asserted type is `never`. (3:10 - 3:14)
   2 | declare const _any_: any;
   3 | _any_ as never;
     |          ^^^^^ Asserted type is `never`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-4 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (2:7 - 2:12)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   1 | 
   2 | 'foo' as any;
     |       ~~~~~~
   3 |         
  Label: Original expression has type `"foo"`. (2:1 - 2:5)
   1 | 
   2 | 'foo' as any;
     | ^^^^^ Original expression has type `"foo"`.
   3 |         
  Label: Asserted type is `any`. (2:10 - 2:12)
   1 | 
   2 | 'foo' as any;
     |          ^^^ Asserted type is `any`.
   3 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-5 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (2:17 - 2:25)
Message: Unsafe assertion from error typed detected: consider using type guards or a safer assertion.
   1 | 
   2 | const bar = foo as number;
     |                 ~~~~~~~~~
   3 |         
  Label: Original expression has type `error`. (2:13 - 2:15)
   1 | 
   2 | const bar = foo as number;
     |             ^^^ Original expression has type `error`.
   3 |         
  Label: Asserted type is `number`. (2:20 - 2:25)
   1 | 
   2 | const bar = foo as number;
     |                    ^^^^^^ Asserted type is `number`.
   3 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-6 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (2:19 - 2:30)
Message: Unsafe assertion to error typed detected: consider using a more specific type to ensure safety.
   1 | 
   2 | const bar = 'foo' as errorType;
     |                   ~~~~~~~~~~~~
   3 |         
  Label: Original expression has type `"foo"`. (2:13 - 2:17)
   1 | 
   2 | const bar = 'foo' as errorType;
     |             ^^^^^ Original expression has type `"foo"`.
   3 |         
  Label: Asserted type is `error`. (2:22 - 2:30)
   1 | 
   2 | const bar = 'foo' as errorType;
     |                      ^^^^^^^^^ Asserted type is `error`.
   3 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:13)
Message: Unsafe type assertion: type 'string[]' is more narrow than the original type.
   2 | declare const a: (string | number)[];
   3 | a as string[];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `(string | number)[]`. (3:1 - 3:1)
   2 | declare const a: (string | number)[];
   3 | a as string[];
     | ^ Original expression has type `(string | number)[]`.
   4 |         
  Label: Asserted type is `string[]`. (3:6 - 3:13)
   2 | declare const a: (string | number)[];
   3 | a as string[];
     |      ^^^^^^^^ Asserted type is `string[]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-1 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:3 - 3:13)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: any[];
   3 | a as number[];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `any[]`. (3:1 - 3:1)
   2 | declare const a: any[];
   3 | a as number[];
     | ^ Original expression has type `any[]`.
   4 |         
  Label: Asserted type is `number[]`. (3:6 - 3:13)
   2 | declare const a: any[];
   3 | a as number[];
     |      ^^^^^^^^ Asserted type is `number[]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-2 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:3 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: number[];
   3 | a as any[];
     |   ~~~~~~~~
   4 |         
  Label: Original expression has type `number[]`. (3:1 - 3:1)
   2 | declare const a: number[];
   3 | a as any[];
     | ^ Original expression has type `number[]`.
   4 |         
  Label: Asserted type is `any[]`. (3:6 - 3:10)
   2 | declare const a: number[];
   3 | a as any[];
     |      ^^^^^ Asserted type is `any[]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:13)
Message: Unsafe type assertion: type 'number[]' is more narrow than the original type.
   2 | declare const a: unknown[];
   3 | a as number[];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `unknown[]`. (3:1 - 3:1)
   2 | declare const a: unknown[];
   3 | a as number[];
     | ^ Original expression has type `unknown[]`.
   4 |         
  Label: Asserted type is `number[]`. (3:6 - 3:13)
   2 | declare const a: unknown[];
   3 | a as number[];
     |      ^^^^^^^^ Asserted type is `number[]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-4 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:12)
Message: Unsafe type assertion: type 'never[]' is more narrow than the original type.
   2 | declare const a: number[];
   3 | a as never[];
     |   ~~~~~~~~~~
   4 |         
  Label: Original expression has type `number[]`. (3:1 - 3:1)
   2 | declare const a: number[];
   3 | a as never[];
     | ^ Original expression has type `number[]`.
   4 |         
  Label: Asserted type is `never[]`. (3:6 - 3:12)
   2 | declare const a: number[];
   3 | a as never[];
     |      ^^^^^^^ Asserted type is `never[]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:11)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | declare const a: string | number;
   3 | a as string;
     |   ~~~~~~~~~
   4 |         
  Label: Original expression has type `string | number`. (3:1 - 3:1)
   2 | declare const a: string | number;
   3 | a as string;
     | ^ Original expression has type `string | number`.
   4 |         
  Label: Asserted type is `string`. (3:6 - 3:11)
   2 | declare const a: string | number;
   3 | a as string;
     |      ^^^^^^ Asserted type is `string`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:20 - 3:28)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | declare const a: string | number;
   3 | a satisfies string as string;
     |                    ~~~~~~~~~
   4 |         
  Label: Original expression has type `string | number`. (3:1 - 3:18)
   2 | declare const a: string | number;
   3 | a satisfies string as string;
     | ^^^^^^^^^^^^^^^^^^ Original expression has type `string | number`.
   4 |         
  Label: Asserted type is `string`. (3:23 - 3:28)
   2 | declare const a: string | number;
   3 | a satisfies string as string;
     |                       ^^^^^^ Asserted type is `string`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:8)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | declare const a: string | number;
   3 | <string>a;
     | ~~~~~~~~
   4 |         
  Label: Original expression has type `string | number`. (3:9 - 3:9)
   2 | declare const a: string | number;
   3 | <string>a;
     |         ^ Original expression has type `string | number`.
   4 |         
  Label: Asserted type is `string`. (3:2 - 3:7)
   2 | declare const a: string | number;
   3 | <string>a;
     |  ^^^^^^ Asserted type is `string`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:21)
Message: Unsafe type assertion: type 'string | boolean' is more narrow than the original type.
   2 | declare const a: string | undefined;
   3 | a as string | boolean;
     |   ~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `string | undefined`. (3:1 - 3:1)
   2 | declare const a: string | undefined;
   3 | a as string | boolean;
     | ^ Original expression has type `string | undefined`.
   4 |         
  Label: Asserted type is `string | boolean`. (3:6 - 3:21)
   2 | declare const a: string | undefined;
   3 | a as string | boolean;
     |      ^^^^^^^^^^^^^^^^ Asserted type is `string | boolean`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-4 - 1]
Diagnostic 1: unsafeTypeAssertion (3:12 - 3:19)
Message: Unsafe type assertion: type '"bar"' is more narrow than the original type.
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     |            ~~~~~~~~
   4 |         
  Label: Original expression has type `"foo"`. (3:1 - 3:10)
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     | ^^^^^^^^^^ Original expression has type `"foo"`.
   4 |         
  Label: Asserted type is `"bar"`. (3:15 - 3:19)
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     |               ^^^^^ Asserted type is `"bar"`.
   4 |         

Diagnostic 2: unsafeTypeAssertion (3:3 - 3:10)
Message: Unsafe type assertion: type '"foo"' is more narrow than the original type.
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     |   ~~~~~~~~
   4 |         
  Label: Original expression has type `string`. (3:1 - 3:1)
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     | ^ Original expression has type `string`.
   4 |         
  Label: Asserted type is `"foo"`. (3:6 - 3:10)
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     |      ^^^^^ Asserted type is `"foo"`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-5 - 1]
Diagnostic 1: unsafeTypeAssertion (3:12 - 3:18)
Message: Unsafe type assertion: type 'true' is more narrow than the original type.
   2 | function foo<T extends boolean>(a: T) {
   3 |   return a as true;
     |            ~~~~~~~
   4 | }
  Label: Original expression has type `boolean`. (3:10 - 3:10)
   2 | function foo<T extends boolean>(a: T) {
   3 |   return a as true;
     |          ^ Original expression has type `boolean`.
   4 | }
  Label: Asserted type is `true`. (3:15 - 3:18)
   2 | function foo<T extends boolean>(a: T) {
   3 |   return a as true;
     |               ^^^^ Asserted type is `true`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-6 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:68)
Message: Unsafe type assertion: type 'Omit<Required<Readonly<{ hello: "world"; foo: "bar"; }>>, "foo">' is more narrow than the original type.
   2 | declare const a: string;
   3 | a as Omit<Required<Readonly<{ hello: 'world'; foo: 'bar' }>>, 'foo'>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `string`. (3:1 - 3:1)
   2 | declare const a: string;
   3 | a as Omit<Required<Readonly<{ hello: 'world'; foo: 'bar' }>>, 'foo'>;
     | ^ Original expression has type `string`.
   4 |         
  Label: Asserted type is `Omit<Required<Readonly<{ hello: "world"; foo: "bar"; }>>, "foo">`. (3:6 - 3:68)
   2 | declare const a: string;
   3 | a as Omit<Required<Readonly<{ hello: 'world'; foo: 'bar' }>>, 'foo'>;
     |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Asserted type is `Omit<Required<Readonly<{ hello: "world"; foo: "bar"; }>>, "foo">`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-7 - 1]
Diagnostic 1: unsafeTypeAssertion (3:17 - 3:27)
Message: Unsafe type assertion: type 'number[]' is more narrow than the original type.
   2 | declare const foo: readonly number[];
   3 | const bar = foo as number[];
     |                 ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `readonly number[]`. (3:13 - 3:15)
   2 | declare const foo: readonly number[];
   3 | const bar = foo as number[];
     |             ^^^ Original expression has type `readonly number[]`.
   4 |         
  Label: Asserted type is `number[]`. (3:20 - 3:27)
   2 | declare const foo: readonly number[];
   3 | const bar = foo as number[];
     |                    ^^^^^^^^ Asserted type is `number[]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ClassAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (9:3 - 9:8)
Message: Unsafe type assertion: type 'Bar' is more narrow than the original type.
   8 | declare const a: Foo;
   9 | a as Bar;
     |   ~~~~~~
  10 |         
  Label: Original expression has type `Foo`. (9:1 - 9:1)
   8 | declare const a: Foo;
   9 | a as Bar;
     | ^ Original expression has type `Foo`.
  10 |         
  Label: Asserted type is `Bar`. (9:6 - 9:8)
   8 | declare const a: Foo;
   9 | a as Bar;
     |      ^^^ Asserted type is `Bar`.
  10 |         
---

[TestNoUnsafeTypeAssertionRule_FunctionAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:12 - 3:24)
Message: Unsafe type assertion: type '() => void' is more narrow than the original type.
   2 | declare const _function_: Function;
   3 | _function_ as () => void;
     |            ~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Function`. (3:1 - 3:10)
   2 | declare const _function_: Function;
   3 | _function_ as () => void;
     | ^^^^^^^^^^ Original expression has type `Function`.
   4 |         
  Label: Asserted type is `() => void`. (3:15 - 3:24)
   2 | declare const _function_: Function;
   3 | _function_ as () => void;
     |               ^^^^^^^^^^ Asserted type is `() => void`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_FunctionAssertions/invalid-1 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:12 - 3:17)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const _function_: Function;
   3 | _function_ as any;
     |            ~~~~~~
   4 |         
  Label: Original expression has type `Function`. (3:1 - 3:10)
   2 | declare const _function_: Function;
   3 | _function_ as any;
     | ^^^^^^^^^^ Original expression has type `Function`.
   4 |         
  Label: Asserted type is `any`. (3:15 - 3:17)
   2 | declare const _function_: Function;
   3 | _function_ as any;
     |               ^^^ Asserted type is `any`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_FunctionAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:12 - 3:19)
Message: Unsafe type assertion: type 'never' is more narrow than the original type.
   2 | declare const _function_: Function;
   3 | _function_ as never;
     |            ~~~~~~~~
   4 |         
  Label: Original expression has type `Function`. (3:1 - 3:10)
   2 | declare const _function_: Function;
   3 | _function_ as never;
     | ^^^^^^^^^^ Original expression has type `Function`.
   4 |         
  Label: Asserted type is `never`. (3:15 - 3:19)
   2 | declare const _function_: Function;
   3 | _function_ as never;
     |               ^^^^^ Asserted type is `never`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (4:31 - 4:34)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   3 | function func<T extends Obj>() {
   4 |   const myObj = { foo: 'hi' } as T;
     |                               ~~~~
   5 | }
  Label: Original expression has type `{ foo: string; }`. (4:17 - 4:29)
   3 | function func<T extends Obj>() {
   4 |   const myObj = { foo: 'hi' } as T;
     |                 ^^^^^^^^^^^^^ Original expression has type `{ foo: string; }`.
   5 | }
  Label: Asserted type is `T`. (4:34 - 4:34)
   3 | function func<T extends Obj>() {
   4 |   const myObj = { foo: 'hi' } as T;
     |                                  ^ Asserted type is `T`.
   5 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (5:19 - 5:22)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   4 |   const o: Obj = { foo: 'hi' };
   5 |   const myObj = o as T;
     |                   ~~~~
   6 | }
  Label: Original expression has type `Obj`. (5:17 - 5:17)
   4 |   const o: Obj = { foo: 'hi' };
   5 |   const myObj = o as T;
     |                 ^ Original expression has type `Obj`.
   6 | }
  Label: Asserted type is `T`. (5:22 - 5:22)
   4 |   const o: Obj = { foo: 'hi' };
   5 |   const myObj = o as T;
     |                      ^ Asserted type is `T`.
   6 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (5:33 - 5:48)
Message: Unsafe type assertion: type 'CustomObjectT' is more narrow than the original type.
   4 | ): CustomObjectT {
   5 |   const newCustomObject = input as CustomObjectT;
     |                                 ~~~~~~~~~~~~~~~~
   6 |   return newCustomObject;
  Label: Original expression has type `number`. (5:27 - 5:31)
   4 | ): CustomObjectT {
   5 |   const newCustomObject = input as CustomObjectT;
     |                           ^^^^^ Original expression has type `number`.
   6 |   return newCustomObject;
  Label: Asserted type is `CustomObjectT`. (5:36 - 5:48)
   4 | ): CustomObjectT {
   5 |   const newCustomObject = input as CustomObjectT;
     |                                    ^^^^^^^^^^^^^ Asserted type is `CustomObjectT`.
   6 |   return newCustomObject;
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (3:5 - 3:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   2 | function unknownConstraint<T extends unknown>(x: T, y: string) {
   3 |   y as T; // banned; generic arbitrary subtype
     |     ~~~~
   4 | }
  Label: Original expression has type `string`. (3:3 - 3:3)
   2 | function unknownConstraint<T extends unknown>(x: T, y: string) {
   3 |   y as T; // banned; generic arbitrary subtype
     |   ^ Original expression has type `string`.
   4 | }
  Label: Asserted type is `T`. (3:8 - 3:8)
   2 | function unknownConstraint<T extends unknown>(x: T, y: string) {
   3 |   y as T; // banned; generic arbitrary subtype
     |        ^ Asserted type is `T`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-4 - 1]
Diagnostic 1: unsafeToUnconstrainedTypeAssertion (3:5 - 3:8)
Message: Unsafe type assertion: 'T' could be instantiated with an arbitrary type which could be unrelated to the original type.
   2 | function unconstrained<T>(x: T, y: string) {
   3 |   y as T;
     |     ~~~~
   4 | }
  Label: Original expression has type `string`. (3:3 - 3:3)
   2 | function unconstrained<T>(x: T, y: string) {
   3 |   y as T;
     |   ^ Original expression has type `string`.
   4 | }
  Label: Asserted type is `T`. (3:8 - 3:8)
   2 | function unconstrained<T>(x: T, y: string) {
   3 |   y as T;
     |        ^ Asserted type is `T`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-5 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (5:5 - 5:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   4 | function anyConstraint<T extends any>(x: T, y: string) {
   5 |   y as T; // banned; generic arbitrary subtype
     |     ~~~~
   6 | }
  Label: Original expression has type `string`. (5:3 - 5:3)
   4 | function anyConstraint<T extends any>(x: T, y: string) {
   5 |   y as T; // banned; generic arbitrary subtype
     |   ^ Original expression has type `string`.
   6 | }
  Label: Asserted type is `T`. (5:8 - 5:8)
   4 | function anyConstraint<T extends any>(x: T, y: string) {
   5 |   y as T; // banned; generic arbitrary subtype
     |        ^ Asserted type is `T`.
   6 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-6 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (6:5 - 6:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   5 | ) {
   6 |   y as T; // banned; assignable to constraint
     |     ~~~~
   7 | }
  Label: Original expression has type `string`. (6:3 - 6:3)
   5 | ) {
   6 |   y as T; // banned; assignable to constraint
     |   ^ Original expression has type `string`.
   7 | }
  Label: Asserted type is `T`. (6:8 - 6:8)
   5 | ) {
   6 |   y as T; // banned; assignable to constraint
     |        ^ Asserted type is `T`.
   7 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-7 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (3:5 - 3:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   2 | function constraintEqualUncastType<T extends string>(x: T, y: string) {
   3 |   y as T; // banned; assignable to constraint
     |     ~~~~
   4 | }
  Label: Original expression has type `string`. (3:3 - 3:3)
   2 | function constraintEqualUncastType<T extends string>(x: T, y: string) {
   3 |   y as T; // banned; assignable to constraint
     |   ^ Original expression has type `string`.
   4 | }
  Label: Asserted type is `T`. (3:8 - 3:8)
   2 | function constraintEqualUncastType<T extends string>(x: T, y: string) {
   3 |   y as T; // banned; assignable to constraint
     |        ^ Asserted type is `T`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-8 - 1]
Diagnostic 1: unsafeTypeAssertion (6:5 - 6:8)
Message: Unsafe type assertion: type 'T' is more narrow than the original type.
   5 | ) {
   6 |   y as T; // banned; *not* assignable to constraint
     |     ~~~~
   7 | }
  Label: Original expression has type `string | number`. (6:3 - 6:3)
   5 | ) {
   6 |   y as T; // banned; *not* assignable to constraint
     |   ^ Original expression has type `string | number`.
   7 | }
  Label: Asserted type is `T`. (6:8 - 6:8)
   5 | ) {
   6 |   y as T; // banned; *not* assignable to constraint
     |        ^ Asserted type is `T`.
   7 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-9 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:5 - 3:8)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | function assertFromAny<T extends string | number>(x: T, y: any) {
   3 |   y as T; // banned; just an `any` complaint. Not a generic subtype.
     |     ~~~~
   4 | }
  Label: Original expression has type `any`. (3:3 - 3:3)
   2 | function assertFromAny<T extends string | number>(x: T, y: any) {
   3 |   y as T; // banned; just an `any` complaint. Not a generic subtype.
     |   ^ Original expression has type `any`.
   4 | }
  Label: Asserted type is `T`. (3:8 - 3:8)
   2 | function assertFromAny<T extends string | number>(x: T, y: any) {
   3 |   y as T; // banned; just an `any` complaint. Not a generic subtype.
     |        ^ Asserted type is `T`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-10 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (6:5 - 6:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'V', but 'V' could be instantiated with a different subtype of its constraint.
   5 | ) {
   6 |   x as V; // banned; assignable to constraint
     |     ~~~~
   7 | }
  Label: Original expression has type `T`. (6:3 - 6:3)
   5 | ) {
   6 |   x as V; // banned; assignable to constraint
     |   ^ Original expression has type `T`.
   7 | }
  Label: Asserted type is `V`. (6:8 - 6:8)
   5 | ) {
   6 |   x as V; // banned; assignable to constraint
     |        ^ Asserted type is `V`.
   7 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-11 - 1]
Diagnostic 1: unsafeToUnconstrainedTypeAssertion (3:5 - 3:8)
Message: Unsafe type assertion: 'V' could be instantiated with an arbitrary type which could be unrelated to the original type.
   2 | function parameterExtendsUnconstrainedParameter<T, V extends T>(x: T, y: V) {
   3 |   x as V; // banned; unconstrained arbitrary type
     |     ~~~~
   4 | }
  Label: Original expression has type `T`. (3:3 - 3:3)
   2 | function parameterExtendsUnconstrainedParameter<T, V extends T>(x: T, y: V) {
   3 |   x as V; // banned; unconstrained arbitrary type
     |   ^ Original expression has type `T`.
   4 | }
  Label: Asserted type is `V`. (3:8 - 3:8)
   2 | function parameterExtendsUnconstrainedParameter<T, V extends T>(x: T, y: V) {
   3 |   x as V; // banned; unconstrained arbitrary type
     |        ^ Asserted type is `V`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-12 - 1]
Diagnostic 1: unsafeToUnconstrainedTypeAssertion (3:5 - 3:8)
Message: Unsafe type assertion: 'T' could be instantiated with an arbitrary type which could be unrelated to the original type.
   2 | function twoUnconstrained<T, V>(x: T, y: V) {
   3 |   y as T;
     |     ~~~~
   4 | }
  Label: Original expression has type `V`. (3:3 - 3:3)
   2 | function twoUnconstrained<T, V>(x: T, y: V) {
   3 |   y as T;
     |   ^ Original expression has type `V`.
   4 | }
  Label: Asserted type is `T`. (3:8 - 3:8)
   2 | function twoUnconstrained<T, V>(x: T, y: V) {
   3 |   y as T;
     |        ^ Asserted type is `T`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-13 - 1]
Diagnostic 1: unsafeTypeAssertion (3:5 - 3:13)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | function toNarrower<T>(x: T, y: string) {
   3 |   x as string; // banned; ordinary 'string' narrower than 'T'.
     |     ~~~~~~~~~
   4 | }
  Label: Original expression has type `T`. (3:3 - 3:3)
   2 | function toNarrower<T>(x: T, y: string) {
   3 |   x as string; // banned; ordinary 'string' narrower than 'T'.
     |   ^ Original expression has type `T`.
   4 | }
  Label: Asserted type is `string`. (3:8 - 3:13)
   2 | function toNarrower<T>(x: T, y: string) {
   3 |   x as string; // banned; ordinary 'string' narrower than 'T'.
     |        ^^^^^^ Asserted type is `string`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-14 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:5 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | function unconstrainedToAny<T>(x: T) {
   3 |   x as any;
     |     ~~~~~~
   4 | }
  Label: Original expression has type `T`. (3:3 - 3:3)
   2 | function unconstrainedToAny<T>(x: T) {
   3 |   x as any;
     |   ^ Original expression has type `T`.
   4 | }
  Label: Asserted type is `any`. (3:8 - 3:10)
   2 | function unconstrainedToAny<T>(x: T) {
   3 |   x as any;
     |        ^^^ Asserted type is `any`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-15 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:5 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | function stringToAny<T extends string>(x: T) {
   3 |   x as any;
     |     ~~~~~~
   4 | }
  Label: Original expression has type `T`. (3:3 - 3:3)
   2 | function stringToAny<T extends string>(x: T) {
   3 |   x as any;
     |   ^ Original expression has type `T`.
   4 | }
  Label: Asserted type is `any`. (3:8 - 3:10)
   2 | function stringToAny<T extends string>(x: T) {
   3 |   x as any;
     |        ^^^ Asserted type is `any`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-16 - 1]
Diagnostic 1: unsafeTypeAssertion (3:5 - 3:16)
Message: Unsafe type assertion: type '"a" | "b"' is more narrow than the original type.
   2 | function stringToNarrower<T extends string>(x: T) {
   3 |   x as 'a' | 'b';
     |     ~~~~~~~~~~~~
   4 | }
  Label: Original expression has type `T`. (3:3 - 3:3)
   2 | function stringToNarrower<T extends string>(x: T) {
   3 |   x as 'a' | 'b';
     |   ^ Original expression has type `T`.
   4 | }
  Label: Asserted type is `"a" | "b"`. (3:8 - 3:16)
   2 | function stringToNarrower<T extends string>(x: T) {
   3 |   x as 'a' | 'b';
     |        ^^^^^^^^^ Asserted type is `"a" | "b"`.
   4 | }
---

[TestNoUnsafeTypeAssertionRule_NeverAssertions/invalid-0 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:9 - 3:14)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const _never_: never;
   3 | _never_ as any;
     |         ~~~~~~
   4 |         
  Label: Original expression has type `never`. (3:1 - 3:7)
   2 | declare const _never_: never;
   3 | _never_ as any;
     | ^^^^^^^ Original expression has type `never`.
   4 |         
  Label: Asserted type is `any`. (3:12 - 3:14)
   2 | declare const _never_: never;
   3 | _never_ as any;
     |            ^^^ Asserted type is `any`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_NeverAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:10 - 3:17)
Message: Unsafe type assertion: type 'never' is more narrow than the original type.
   2 | declare const _string_: string;
   3 | _string_ as never;
     |          ~~~~~~~~
   4 |         
  Label: Original expression has type `string`. (3:1 - 3:8)
   2 | declare const _string_: string;
   3 | _string_ as never;
     | ^^^^^^^^ Original expression has type `string`.
   4 |         
  Label: Asserted type is `never`. (3:13 - 3:17)
   2 | declare const _string_: string;
   3 | _string_ as never;
     |             ^^^^^ Asserted type is `never`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ObjectAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (2:14 - 5:1)
Message: Unsafe type assertion: type '{ bar: number; bas: string; }' is more narrow than the original type.
   1 | 
   2 | var foo = {} as {
     |              ~~~~
   3 |   bar: number;
     | ~~~~~~~~~~~~~~
   4 |   bas: string;
     | ~~~~~~~~~~~~~~
   5 | };
     | ~
   6 |         
  Label: Original expression has type `{}`. (2:11 - 2:12)
   1 | 
   2 | var foo = {} as {
     |           ^^ Original expression has type `{}`.
   3 |   bar: number;
  Label: Asserted type is `{ bar: number; bas: string; }`. (2:17 - 5:1)
   1 | 
   2 | var foo = {} as {
     |                 ^ Asserted type is `{ bar: number; bas: string; }`.
   3 |   bar: number;
     | ^^^^^^^^^^^^^^ Asserted type is `{ bar: number; bas: string; }`.
   4 |   bas: string;
     | ^^^^^^^^^^^^^^ Asserted type is `{ bar: number; bas: string; }`.
   5 | };
     | ^ Asserted type is `{ bar: number; bas: string; }`.
   6 |         
---

[TestNoUnsafeTypeAssertionRule_ObjectAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:36 - 3:70)
Message: Unsafe type assertion: type '{ hello: string; world: string; }' is more narrow than the original type.
   2 | declare const a: { hello: string };
   3 | a satisfies Record<string, string> as { hello: string; world: string };
     |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `{ hello: string; }`. (3:1 - 3:34)
   2 | declare const a: { hello: string };
   3 | a satisfies Record<string, string> as { hello: string; world: string };
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Original expression has type `{ hello: string; }`.
   4 |         
  Label: Asserted type is `{ hello: string; world: string; }`. (3:39 - 3:70)
   2 | declare const a: { hello: string };
   3 | a satisfies Record<string, string> as { hello: string; world: string };
     |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Asserted type is `{ hello: string; world: string; }`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ObjectAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:22)
Message: Unsafe type assertion: type '{ hello: string; }' is more narrow than the original type.
   2 | declare const a: { hello?: string };
   3 | a as { hello: string };
     |   ~~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `{ hello?: string | undefined; }`. (3:1 - 3:1)
   2 | declare const a: { hello?: string };
   3 | a as { hello: string };
     | ^ Original expression has type `{ hello?: string | undefined; }`.
   4 |         
  Label: Asserted type is `{ hello: string; }`. (3:6 - 3:22)
   2 | declare const a: { hello?: string };
   3 | a as { hello: string };
     |      ^^^^^^^^^^^^^^^^^ Asserted type is `{ hello: string; }`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:20)
Message: Unsafe type assertion: type 'Promise<string>' is more narrow than the original type.
   2 | declare const a: Promise<string | number>;
   3 | a as Promise<string>;
     |   ~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Promise<string | number>`. (3:1 - 3:1)
   2 | declare const a: Promise<string | number>;
   3 | a as Promise<string>;
     | ^ Original expression has type `Promise<string | number>`.
   4 |         
  Label: Asserted type is `Promise<string>`. (3:6 - 3:20)
   2 | declare const a: Promise<string | number>;
   3 | a as Promise<string>;
     |      ^^^^^^^^^^^^^^^ Asserted type is `Promise<string>`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-1 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:3 - 3:20)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: Promise<any>;
   3 | a as Promise<number>;
     |   ~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Promise<any>`. (3:1 - 3:1)
   2 | declare const a: Promise<any>;
   3 | a as Promise<number>;
     | ^ Original expression has type `Promise<any>`.
   4 |         
  Label: Asserted type is `Promise<number>`. (3:6 - 3:20)
   2 | declare const a: Promise<any>;
   3 | a as Promise<number>;
     |      ^^^^^^^^^^^^^^^ Asserted type is `Promise<number>`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-2 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:3 - 3:17)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: Promise<number>;
   3 | a as Promise<any>;
     |   ~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Promise<number>`. (3:1 - 3:1)
   2 | declare const a: Promise<number>;
   3 | a as Promise<any>;
     | ^ Original expression has type `Promise<number>`.
   4 |         
  Label: Asserted type is `Promise<any>`. (3:6 - 3:17)
   2 | declare const a: Promise<number>;
   3 | a as Promise<any>;
     |      ^^^^^^^^^^^^ Asserted type is `Promise<any>`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-3 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:3 - 3:19)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: Promise<number[]>;
   3 | a as Promise<any[]>;
     |   ~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Promise<number[]>`. (3:1 - 3:1)
   2 | declare const a: Promise<number[]>;
   3 | a as Promise<any[]>;
     | ^ Original expression has type `Promise<number[]>`.
   4 |         
  Label: Asserted type is `Promise<any[]>`. (3:6 - 3:19)
   2 | declare const a: Promise<number[]>;
   3 | a as Promise<any[]>;
     |      ^^^^^^^^^^^^^^ Asserted type is `Promise<any[]>`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-4 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:20)
Message: Unsafe type assertion: type 'Promise<number>' is more narrow than the original type.
   2 | declare const a: Promise<unknown>;
   3 | a as Promise<number>;
     |   ~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Promise<unknown>`. (3:1 - 3:1)
   2 | declare const a: Promise<unknown>;
   3 | a as Promise<number>;
     | ^ Original expression has type `Promise<unknown>`.
   4 |         
  Label: Asserted type is `Promise<number>`. (3:6 - 3:20)
   2 | declare const a: Promise<unknown>;
   3 | a as Promise<number>;
     |      ^^^^^^^^^^^^^^^ Asserted type is `Promise<number>`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-5 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:19)
Message: Unsafe type assertion: type 'Promise<never>' is more narrow than the original type.
   2 | declare const a: Promise<number>;
   3 | a as Promise<never>;
     |   ~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `Promise<number>`. (3:1 - 3:1)
   2 | declare const a: Promise<number>;
   3 | a as Promise<never>;
     | ^ Original expression has type `Promise<number>`.
   4 |         
  Label: Asserted type is `Promise<never>`. (3:6 - 3:19)
   2 | declare const a: Promise<number>;
   3 | a as Promise<never>;
     |      ^^^^^^^^^^^^^^ Asserted type is `Promise<never>`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:13)
Message: Unsafe type assertion: type '[string]' is more narrow than the original type.
   2 | declare const a: [string | number];
   3 | a as [string];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[string | number]`. (3:1 - 3:1)
   2 | declare const a: [string | number];
   3 | a as [string];
     | ^ Original expression has type `[string | number]`.
   4 |         
  Label: Asserted type is `[string]`. (3:6 - 3:13)
   2 | declare const a: [string | number];
   3 | a as [string];
     |      ^^^^^^^^ Asserted type is `[string]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:21)
Message: Unsafe type assertion: type '[string, string]' is more narrow than the original type.
   2 | declare const a: [string, number];
   3 | a as [string, string];
     |   ~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[string, number]`. (3:1 - 3:1)
   2 | declare const a: [string, number];
   3 | a as [string, string];
     | ^ Original expression has type `[string, number]`.
   4 |         
  Label: Asserted type is `[string, string]`. (3:6 - 3:21)
   2 | declare const a: [string, number];
   3 | a as [string, string];
     |      ^^^^^^^^^^^^^^^^ Asserted type is `[string, string]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:21)
Message: Unsafe type assertion: type '[string, number]' is more narrow than the original type.
   2 | declare const a: [string];
   3 | a as [string, number];
     |   ~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[string]`. (3:1 - 3:1)
   2 | declare const a: [string];
   3 | a as [string, number];
     | ^ Original expression has type `[string]`.
   4 |         
  Label: Asserted type is `[string, number]`. (3:6 - 3:21)
   2 | declare const a: [string];
   3 | a as [string, number];
     |      ^^^^^^^^^^^^^^^^ Asserted type is `[string, number]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:13)
Message: Unsafe type assertion: type '[string]' is more narrow than the original type.
   2 | declare const a: [string, number];
   3 | a as [string];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[string, number]`. (3:1 - 3:1)
   2 | declare const a: [string, number];
   3 | a as [string];
     | ^ Original expression has type `[string, number]`.
   4 |         
  Label: Asserted type is `[string]`. (3:6 - 3:13)
   2 | declare const a: [string, number];
   3 | a as [string];
     |      ^^^^^^^^ Asserted type is `[string]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-4 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:3 - 3:13)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: [any];
   3 | a as [number];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[any]`. (3:1 - 3:1)
   2 | declare const a: [any];
   3 | a as [number];
     | ^ Original expression has type `[any]`.
   4 |         
  Label: Asserted type is `[number]`. (3:6 - 3:13)
   2 | declare const a: [any];
   3 | a as [number];
     |      ^^^^^^^^ Asserted type is `[number]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-5 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:3 - 3:21)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: [number, any];
   3 | a as [number, number];
     |   ~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[number, any]`. (3:1 - 3:1)
   2 | declare const a: [number, any];
   3 | a as [number, number];
     | ^ Original expression has type `[number, any]`.
   4 |         
  Label: Asserted type is `[number, number]`. (3:6 - 3:21)
   2 | declare const a: [number, any];
   3 | a as [number, number];
     |      ^^^^^^^^^^^^^^^^ Asserted type is `[number, number]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-6 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:3 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: [number];
   3 | a as [any];
     |   ~~~~~~~~
   4 |         
  Label: Original expression has type `[number]`. (3:1 - 3:1)
   2 | declare const a: [number];
   3 | a as [any];
     | ^ Original expression has type `[number]`.
   4 |         
  Label: Asserted type is `[any]`. (3:6 - 3:10)
   2 | declare const a: [number];
   3 | a as [any];
     |      ^^^^^ Asserted type is `[any]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-7 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:13)
Message: Unsafe type assertion: type '[number]' is more narrow than the original type.
   2 | declare const a: [unknown];
   3 | a as [number];
     |   ~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[unknown]`. (3:1 - 3:1)
   2 | declare const a: [unknown];
   3 | a as [number];
     | ^ Original expression has type `[unknown]`.
   4 |         
  Label: Asserted type is `[number]`. (3:6 - 3:13)
   2 | declare const a: [unknown];
   3 | a as [number];
     |      ^^^^^^^^ Asserted type is `[number]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-8 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:12)
Message: Unsafe type assertion: type '[never]' is more narrow than the original type.
   2 | declare const a: [number];
   3 | a as [never];
     |   ~~~~~~~~~~
   4 |         
  Label: Original expression has type `[number]`. (3:1 - 3:1)
   2 | declare const a: [number];
   3 | a as [never];
     | ^ Original expression has type `[number]`.
   4 |         
  Label: Asserted type is `[never]`. (3:6 - 3:12)
   2 | declare const a: [number];
   3 | a as [never];
     |      ^^^^^^^ Asserted type is `[never]`.
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-9 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:22)
Message: Unsafe type assertion: type '[Promise<string>]' is more narrow than the original type.
   2 | declare const a: [Promise<string | number>];
   3 | a as [Promise<string>];
     |   ~~~~~~~~~~~~~~~~~~~~
   4 |         
  Label: Original expression has type `[Promise<string | number>]`. (3:1 - 3:1)
   2 | declare const a: [Promise<string | number>];
   3 | a as [Promise<string>];
     | ^ Original expression has type `[Promise<string | number>]`.
   4 |         
  Label: Asserted type is `[Promise<string>]`. (3:6 - 3:22)
   2 | declare const a: [Promise<string | number>];
   3 | a as [Promise<string>];
     |      ^^^^^^^^^^^^^^^^^ Asserted type is `[Promise<string>]`.
   4 |         
---
